--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.6",
     "@types/bun": "latest",
-    "@types/xml2js": "^0.4.14",
-    "bun-match-svg": "^0.0.14",
-    "xml2js": "^0.6.2"
+    "bun-match-svg": "^0.0.14"
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "fast-xml-parser": "^5.3.2",
+    "sharp": "^0.34.5"
   }
 }
