--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.6",
     "@types/bun": "latest",
-    "bun-match-svg": "^0.0.14"
+    "bun-match-svg": "^0.0.14",
+    "svgson": "^5.3.1",
+    "transformation-matrix": "^3.1.0"
   },
   "peerDependencies": {
     "typescript": "^5"
