--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "lbrnts",
   "main": "dist/index.js",
   "type": "module",
+  "version": "0.0.1",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup-node ./lib/index.ts --format esm --dts",
     "build:site": "bun build site/index.html",
