--- a/.github/workflows/bun-test.yml
+++ b/.github/workflows/bun-test.yml
@@ -29,3 +29,9 @@ jobs:
 
       - name: Run tests
         run: bun test
+        
+      - name: Upload diff.png artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: diff-pngs
+          path: '*.diff.png'
