--- a/.github/workflows/bun-test.yml
+++ b/.github/workflows/bun-test.yml
@@ -22,10 +22,16 @@ jobs:
       - name: Setup bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: latest
+          bun-version: 1.3.1
 
       - name: Install dependencies
         run: bun install
 
       - name: Run tests
         run: bun test
+        
+      - name: Upload diff.png artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: diff-pngs
+          path: '*.diff.png'
