on failure upload diff

--- a/.github/workflows/bun-test.yml
+++ b/.github/workflows/bun-test.yml
@@ -32,6 +32,7 @@ jobs:
         
       - name: Upload diff.png artifacts
         uses: actions/upload-artifact@v4
+        if: failure()
         with:
           name: diff-pngs
           path: '*.diff.png'
